# PBO

./: .gitignore  README.md  config.py  config_mmas_mmass.py  designed_GA.py  main.py  main_mmas.py  pyproject.toml  requirements.txt  test_ga_correctness.py
algorithms/: ACO.py  DesignedGA.py  MMAS.py  MMAS_star.py  MaxMinAS.py  MaxMinASStar.py  OnePlusOneEA.py  RLS.py  RandomSearch.py  __init__.py  algorithm_interface.py  test_GA.py
ideas/: exercise2_sketches.ipynb
ioh-data-ACO-1/: IOHprofiler_f18_LABS.json  IOHprofiler_f1_OneMax.json  IOHprofiler_f23_NQueens.json  IOHprofiler_f24_ConcatenatedTrap.json  IOHprofiler_f25_NKLandscapes.json  IOHprofiler_f2_LeadingOnes.json  IOHprofiler_f3_Linear.json
ioh-data-CustomACO-1/: IOHprofiler_f18_LABS.json  IOHprofiler_f1_OneMax.json  IOHprofiler_f23_NQueens.json  IOHprofiler_f24_ConcatenatedTrap.json  IOHprofiler_f25_NKLandscapes.json  IOHprofiler_f2_LeadingOnes.json  IOHprofiler_f3_Linear.json
ioh-data-MaxMinAS-1/: IOHprofiler_f18_LABS.json  IOHprofiler_f1_OneMax.json  IOHprofiler_f23_NQueens.json  IOHprofiler_f24_ConcatenatedTrap.json  IOHprofiler_f25_NKLandscapes.json  IOHprofiler_f2_LeadingOnes.json  IOHprofiler_f3_Linear.json
ioh-data-MaxMinAS-2/: IOHprofiler_f18_LABS.json  IOHprofiler_f1_OneMax.json  IOHprofiler_f23_NQueens.json  IOHprofiler_f24_ConcatenatedTrap.json  IOHprofiler_f25_NKLandscapes.json  IOHprofiler_f2_LeadingOnes.json  IOHprofiler_f3_Linear.json
ioh-data-Random Search-1/: IOHprofiler_f1_OneMax.json  IOHprofiler_f2_LeadingOnes.json
playground/: notes.txt
proof/: RLS_F3-proof.bbl
src/: RLS.py  (+10 more)
(+135 files in other folders)
